@@ -1,14 +1,0 @@
-#!/bin/sh
-
-dist_bin=`dirname $0`
-
-MOZILLA_HOME=@MOZILLA_HOME@
-
-LD_LIBRARY_PATH=$MOZILLA_HOME:$LD_LIBRARY_PATH
-export LD_LIBRARY_PATH
-
-MOZILLA_FIVE_HOME=$MOZILLA_HOME
-export MOZILLA_FIVE_HOME
-
-exec "$dist_bin/devhelp-bin" "$@"
-
